syntax = "proto3";
package common;

message FloatVector3 {
    float x = 1;
    float y = 2;
    float z = 3;
}